MacViews: Select word under cursor on right click.

This CL modifies SelectionController::OnMousePressed to ensure right clicking
outside the current selection, selects the word under the cursor on Mac. A new
constant PlatformStyle::kSelectWordOnRightClick is introduced to facilitate
this.

BUG=657556
TEST= On Mac, enable chrome://flags/#secondary-ui-md. Open Bookmark Bubble.
Enter some text in the name textfield. Ensure the word under the cursor is
selected on a right click outside the current selection.

Review-Url: https://codereview.chromium.org/2580293003
Cr-Commit-Position: refs/heads/master@{#440373}

Former-commit-id: e9f75eab14f8845b5f23d0d50286191454f9f90d